# freecamultimate

./: CMakeLists.txt
backend/dx11/: CMakeLists.txt
backend/dx11/inc/: present_hook.hpp
backend/dx11/src/: present_hook.cpp
base/: CMakeLists.txt
dll_entry/: CMakeLists.txt
dll_entry/src/: dll_main.cpp
